[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlayerHUD/Scoreboard/scoreboard.gd" type="Script" id=1]
[ext_resource path="res://Assets/PlayerHUD/Scoreboard/resources/scoreboard_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/PlayerHUD/Scoreboard/art/scoreboard.png" type="Texture" id=3]
[ext_resource path="res://Assets/PlayerHUD/Scoreboard/art/scoreboard-rotate.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "OverTime"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("OverLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreboardRotate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameTimerLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OverLabel:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 2.6, 2.8, 3, 3.2, 5.1, 5.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "o", "ov", "ve", "er", "rt", "ti", "im", "me", "e    ", "" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OverLabel/OverTimeLabel2:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 2.6, 2.8, 3, 3.2, 5.1, 5.3, 5.5, 5.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "o", "ov", "ve", "er", "rt", "ti", "im", "me", "e", "" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OverLabel:align")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OverLabel/OverTimeLabel2:align")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 5.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Spin"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreboardRotate:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameTimerLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OverLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScoreboardRotate:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("OverLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreboardRotate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameTimerLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Scoreboard" type="TextureRect"]
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="PlayerOneScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 9.0
margin_top = -7.0
margin_right = 61.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 52, 32 )
custom_colors/font_color = Color( 0.901961, 0.156863, 0.235294, 1 )
custom_fonts/font = ExtResource( 2 )
text = "88"
align = 2
valign = 1

[node name="GameTimerLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -7.0
margin_right = 55.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 110, 32 )
custom_colors/font_color = Color( 0.901961, 0.156863, 0.235294, 1 )
custom_fonts/font = ExtResource( 2 )
text = "88:88"
align = 2
valign = 1

[node name="OverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -7.0
margin_right = 55.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.901961, 0.156863, 0.235294, 1 )
custom_fonts/font = ExtResource( 2 )
text = "o"
align = 2
valign = 1

[node name="OverTimeLabel2" type="Label" parent="OverLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -16.0
margin_right = -32.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.901961, 0.156863, 0.235294, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1

[node name="PlayerTwoScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -7.0
margin_right = -9.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 52, 32 )
custom_colors/font_color = Color( 0.901961, 0.156863, 0.235294, 1 )
custom_fonts/font = ExtResource( 2 )
text = "88"
align = 2
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OverTime = SubResource( 2 )
anims/Spin = SubResource( 1 )
anims/idle = SubResource( 3 )

[node name="ScoreboardRotate" type="Sprite" parent="."]
visible = false
position = Vector2( 125, 49 )
texture = ExtResource( 4 )
hframes = 6
